tests/expectations/compiler/structs/struct_contains_record_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372030]: A struct or record cannot contain another record.
    --> compiler-test:6:9
     |
   6 |         token: Token,
     |         ^^^^^
     |
     = Remove the record `Token` from `Foo`.
Error [ETYC0372058]: Cyclic dependency between structs: `Foo` --> `Token` --> `Foo`
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
